--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".upcomingdetails"></activity>
+        <activity android:name=".HistoryDetails"></activity>
+        <activity android:name=".upcomingdetails" />
         <activity android:name=".Tab2Fragment" />
         <activity android:name=".Tab1Fragment" />
         <activity android:name=".MainUI" />
