--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".HistoryDetails"></activity>
+        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".HistoryDetails" />
         <activity android:name=".upcomingdetails" />
         <activity android:name=".Tab2Fragment" />
         <activity android:name=".Tab1Fragment" />
         <activity android:name=".MainUI" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".splashscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
