--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".VerifyOtp"></activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".HistoryDetails" />
         <activity android:name=".upcomingdetails" />
         <activity android:name=".Tab2Fragment" />
