--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".VerifyOtp"></activity>
+        <activity android:name=".pendingdetails"></activity>
+        <activity android:name=".Tab3Fragment" />
+        <activity android:name=".HomeScreen" />
+        <activity android:name=".VerifyOtp" />
         <activity android:name=".MainActivity" />
         <activity android:name=".HistoryDetails" />
         <activity android:name=".upcomingdetails" />
